<resources>
    <string name="app_name">Puppy Love</string>
    <string name="action_settings">Settings</string>
    <string name="mainActivityTitle">Puppy Love</string>
    <string name="adoptButtonLabel">Adopt</string>
    <string name="rejectButtonLabel">Reject</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_label">User Name</string>
    <string name="password_label">Password</string>
    <string name="login_label">Login</string>
    <string name="create_account_label">Create Account</string>
    <string name="forgot_password_label">Forgot Password</string>
    <string name="email_label">Email</string>
    <string name="first_name_label">First Name</string>
    <string name="last_name_label">Last Name</string>
    <string name="phone_label">Phone</string>
    <string name="confirm_password_label">Confirm</string>
    <string name="occupation_label">Occupation</string>
    <string name="reset_password_label">Reset Password</string>
    <string name="edit_profile_label">Edit Profile</string>
    <string name="close_label">Close</string>
    <string name="match_success_message">Congratulations! You have matched with this puppy! Someone from the agency will contact you directly with details for your adoption.</string>
    <string name="back_to_home_label">Back to Home</string>
</resources>